--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
             "Taobao\\sdk\\": "src/",
             "Taobao\\sdk\\topclient\\": "src/top/"
         }
-    }
+    },
+    "extra": {
+      "branch-alias": {
+        "dev-master": "1.0.0"
+      }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
