--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +19,7 @@
     },
     "extra": {
       "branch-alias": {
-        "dev-master": "1.0.0"
+        "dev-master": "1.0.0-dev"
       }
     },
     "minimum-stability": "dev",
